--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
-    "name": "linkedin-ai-crm-dashboard",
+    "name": "linkedin-scraper",
     "version": "1.0.0",
-    "description": "LinkedIn AI CRM Dashboard",
+    "description": "LinkedIn Scraper using Bright Data Scraping Browser",
+    "main": "server.js",
     "scripts": {
-        "start": "npx serve -s . -l $PORT"
+        "start": "node server.js",
+        "scrape": "node scrape.js"
     },
     "dependencies": {
-        "serve": "^14.2.1"
+        "express": "^4.18.2",
+        "playwright-core": "^1.40.0",
+        "@supabase/supabase-js": "^2.38.0",
+        "dotenv": "^16.3.1",
+        "node-cron": "^3.0.3"
+    },
+    "engines": {
+        "node": ">=18"
     }
 }
