--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
         "scrape": "node scrape.js"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.95.0",
+        "dotenv": "^16.6.1",
         "express": "^4.18.2",
-        "playwright-core": "^1.40.0",
-        "@supabase/supabase-js": "^2.38.0",
-        "dotenv": "^16.3.1",
-        "node-cron": "^3.0.3"
+        "node-cron": "^3.0.3",
+        "playwright": "^1.58.1",
+        "playwright-core": "^1.58.1"
     },
     "engines": {
         "node": ">=18"
