--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "dotenv": "^16.6.1",
         "express": "^4.18.2",
         "node-cron": "^3.0.3",
+        "node-fetch": "^2.7.0",
         "playwright": "^1.58.1",
         "playwright-core": "^1.58.1"
     },
